--- a/ingress.yaml
+++ b/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
  ingressClassName: nginx
  rules:
- - host: eks-cohort-5.sctp-sandbox.com
+ - host: eks-cohort-5-node.sctp-sandbox.com
    http:
      paths:
      - backend:
