--- a/node_application/ingress.yaml
+++ b/node_application/ingress.yaml
@@ -13,5 +13,5 @@ spec:
            name: hello-node
            port:
              number: 80
-       path: /node-siewlee
+       path: /
        pathType: Prefix
